--- a/TODO
+++ b/TODO
@@ -13,6 +13,19 @@
    if it just loads whatever is currently in ALBION_LOADED_CONFIGS,
    then how will an env get loaded when you log in?
 
+* relatedly, it all depends on how the thing in .profile works, since
+   that is really what gives env's their special status.  you could
+   just load and unload configs, and have the .profile thing load
+   whatever is in ALBION_LOADED_CONFIGS.  or, you can have the
+   .profile thing load an env, and those become very special and it's
+   impossible to unload something that is loaded in the config.
+
+* or, you could have different states, where an env could mark
+   something as must-load or could-load, and those would just update
+   ALBION_LOADED_CONFIGS, or ALBION_TO_BE_LOADED, and then an unload
+   could somehow override a could-loaded configs, somehow.  will have
+   to think on that some more.
+
 * eval or not eval:  some of the albion commands will output strings
    that need to be fed to eval, some of the albion commands will just
    print informational strings.  How to work this?  So far I'm just
