--- a/TODO
+++ b/TODO
@@ -36,3 +36,7 @@
 
 * list commands will need to format output in nice columns when the
    list is long.
+
+* put albion functions and aliases in .bashrc, leave environment
+   variables in .profile.  I believe this may only be a korn shell
+   thing, but we want to be as compatible as possible.
